[package]
name = "ghostwire"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghostwire"
path = "src/main.rs"

[dependencies]
netlink-sys = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# Phase 4: desktop notifications — enable with: cargo build --features desktop-notify
notify-rust = { version = "4", optional = true }

[features]
desktop-notify = ["notify-rust"]
